--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.astrologieorion.com</title>
     <!-- ====== CSS Files ====== -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/skins/color-1.css">
     <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- ====== Style Switcher ====== -->
-    <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
-    <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
-    <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
-    <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
-    <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
-    <link rel="stylesheet" href="css/style-switcher.css">
+    <link rel="stylesheet" href="/css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="/css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="/css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="/css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="/css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="/css/style-switcher.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0%22/%3E
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0%22/%3E">
 </head>
 <body>
     <!-- ====== Main Container ======-->
@@ -34,7 +33,7 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-info"></i>About</a></li>
-                <li><a href="#portfolio"><i class="fa fa-bookmark"></i>Zodiac Sign</i></a></li>
+                <li><a href="#portfolio"><i class="fa fa-bookmark"></i>Zodiac Sign</a></li>
                 <li><a href="#services"><i class="fa fa-bars"></i>Services</a></li>
                 <li><a href="#feedback"><i class="fa fa-comments"></i>Customers Feedback</a></li>
                 <li><a href="#contact"><i class="fa fa-address-book"></i>Contact</a></li>
@@ -508,26 +507,24 @@
     <!-- ====== Style Switcher Start ====== -->
     <div class="style-switcher">
         <div class="style-switcher-toggler s-icon">
-            <i class="fa-solid fa-cog fa-spin"></i>
+            <i class="fa fa-gear fa-spin"></i>
         </div>
         <div class="day-night s-icon">
-            <i class="fas fa-moon"></i>
+            <i class="fa fa-star"></i>
         </div>
-        <div><h4>Theme Colors</h4>
-        <div class="colors" id="colors">
+        <h4>Theme Colors</h4>
+        <div class="colors">
             <span class="color-1" onclick="setActiveStyle('color-1')"></span>
             <span class="color-2" onclick="setActiveStyle('color-2')"></span>
             <span class="color-3" onclick="setActiveStyle('color-3')"></span>
             <span class="color-4" onclick="setActiveStyle('color-4')"></span>
             <span class="color-5" onclick="setActiveStyle('color-5')"></span>
-            <span class="material-symbols-outlined" id="boutton1">settings</span>
-        </div>
         </div>
     </div>
     <!-- ====== Style Switcher End ====== -->
     <!-- ====== JS Files ====== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
-    <script src="js/script.js"></script>
-    <script src="js/style-switcher.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/style-switcher.js"></script>
     </body>
     </html>
