--- a/index.html
+++ b/index.html
@@ -522,6 +522,23 @@
         </div>
     </div>
     <!-- ====== Style Switcher End ====== -->
+    <!-- ====== Copyright Section Start ====== -->
+    <footer>
+        <div class="footer-content">
+            <h3>Astrology Orion</h3>
+            <ul class="socials">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy;2022 © Made for private purposes by <span>Astrology Orion</span></p>
+        </div>
+    </footer>
+    <!-- ====== Copyright Section End ====== -->
     <!-- ====== JS Files ====== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="/js/script.js"></script>
